--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
+    "fs": "^0.0.1-security",
     "mongoose": "^7.4.3",
     "node-fetch": "^2.7.0",
+    "objects-to-csv": "^1.3.6",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
   },
